--- a/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
+++ b/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
@@ -190,7 +190,7 @@
                 <li><b>Rudolph (2000-2003):</b> Formulated the CCN criterion, realizing it was equivalent to $\|\rho\|_{\pi} \le 1$ and was an exact criterion based on the Hahn-Banach theorem.</li>
             </ul>
         </div>
-        <div class="column-details">
+        <div class="column-text">
              <h2>&nbsp;</h2>
              <h3 style="color:#555">Functional Analysis (1950s)</h3>
              <p>Grothendieck sought a canonical way to define norms on tensor product spaces to linearize bilinear maps.</p>
