--- a/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
+++ b/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
@@ -321,9 +321,15 @@
 
     <div class="columns">
         <div class="column-text">
-            <h2>Example: Matrix Norms</h2>
-            <p>The operator (spectral) norm and trace (nuclear) norm on matrices arise naturally as tensor norms.</p>
-            <p>For the space of $n \times n$ matrices $\mathcal{M}_n(\mathbb{R}) \cong \ell_2^n \otimes \ell_2^n$:</p>
+                <h2>Example: Matrix Norms</h2>
+                <p>The operator (spectral) norm and trace (nuclear) norm on matrices arise naturally as tensor norms.</p>
+                <p>For the space of $n \times n$ matrices $\mathcal{M}_n(\mathbb{R}) \cong \ell_2^n \otimes \ell_2^n$:</p>
+                 <ul>
+                    <li>Operator Norm ($s_\infty$):<br>
+                    $(\mathcal{M}_n, \|\cdot\|_{s_\infty}) = \ell_2^n \otimes_\varepsilon \ell_2^n$</li>
+                    <li>Trace Norm ($s_1$):<br>
+                    $(\mathcal{M}_n, \|\cdot\|_{s_1}) = \ell_2^n \otimes_\pi \ell_2^n$</li>
+                 </ul>
         </div>
         <div class="column-details">
                 <h4>Historical Footnote</h4>
