--- a/assets/html/tensor-norms-quantum-entanglement-3.html
+++ b/assets/html/tensor-norms-quantum-entanglement-3.html
@@ -439,7 +439,7 @@
                 </ul>
             </div>
             <div class="column-text" style="max-width: 48%;">
-                 <div style="margin-top: 2em;"></div>
+                 <h2 style="color: white; user-select: none; pointer-events: none; visibility: hidden;">History: Two Worlds, One Problem</h2>
                  <h3 style="color:#555">Functional Analysis (1950s)</h3>
                  <p>Grothendieck sought a canonical way to define norms on tensor product spaces to linearize bilinear maps.</p>
                  <ul>
