--- a/assets/html/tensor-norms-quantum-entanglement-3.html
+++ b/assets/html/tensor-norms-quantum-entanglement-3.html
@@ -439,7 +439,7 @@
                 </ul>
             </div>
             <div class="column-text" style="max-width: 48%;">
-                 <h2>History: Two Worlds, One Problem</h2>
+                 <h2>&nbsp;</h2>
                  <h3 style="color:#555">Functional Analysis (1950s)</h3>
                  <p>Grothendieck sought a canonical way to define norms on tensor product spaces to linearize bilinear maps.</p>
                  <ul>
