--- a/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
+++ b/assets/html/tensor-norms-quantum-entanglement-3-pdf.html
@@ -191,7 +191,7 @@
             </ul>
         </div>
         <div class="column-text">
-             <h2>&nbsp;</h2>
+             <h2>&nbsp;&nbsp;</h2>
              <h3 style="color:#555">Functional Analysis (1950s)</h3>
              <p>Grothendieck sought a canonical way to define norms on tensor product spaces to linearize bilinear maps.</p>
              <ul>
