--- a/assets/html/tensor-norms-quantum-entanglement-2.html
+++ b/assets/html/tensor-norms-quantum-entanglement-2.html
@@ -419,11 +419,12 @@
                 <div class="cell"></div>
                 <div class="cell"></div>
                 <!-- Axis labels -->
-                <span class="axis-label axis-x">|0⟩</span>
-                <span class="axis-label axis-x" style="left: 60px;">|1⟩</span>
-                <span class="axis-label axis-x" style="left: 120px;">|2⟩</span>
-                <span class="axis-label axis-y" style="top: 60px;">|1⟩</span>
-                <span class="axis-label axis-y" style="top: 120px;">|2⟩</span>
+                <span class="axis-label axis-x" style="left: 30px">|0⟩</span>
+                <span class="axis-label axis-x" style="left: 90px;">|1⟩</span>
+                <span class="axis-label axis-x" style="left: 180px;">|2⟩</span>
+                <span class="axis-label axis-y" style="top: 30px">|0></span>
+                <span class="axis-label axis-y" style="top: 90px;">|1⟩</span>
+                <span class="axis-label axis-y" style="top: 180px;">|2⟩</span>
               </div>
               <!-- SVG ellipses for the ovals -->
               <svg class="tiles-ellipses" width="180" height="180">
