--- a/assets/html/tensor-norms-quantum-entanglement-2.html
+++ b/assets/html/tensor-norms-quantum-entanglement-2.html
@@ -427,19 +427,23 @@
                 <span class="axis-label axis-y" style="top: 140px;">|2⟩</span>
               </div>
               <!-- SVG ellipses for the ovals -->
-              <svg class="tiles-ellipses" width="180" height="180">
-                <ellipse cx="62.5" cy="30" rx="38" ry="15" class="ellipse1"/>
-                <ellipse cx="120" cy="152.5" rx="38" ry="15" class="ellipse2"/>
-                <ellipse cx="150" cy="60" rx="15" ry="38" class="ellipse3"/>
-                <ellipse cx="30" cy="125" rx="15" ry="38" class="ellipse4"/>
-              </svg>
+                          <svg class="tiles-ellipses" width="180" height="180">
+              <ellipse cx="62.5" cy="30" rx="38" ry="15" class="ellipse1"/>
+              <text x="62.5" y="35" text-anchor="middle" font-size="16" fill="#a00">$x_1$</text>
+              <ellipse cx="120" cy="152.5" rx="38" ry="15" class="ellipse2"/>
+              <text x="120" y="157" text-anchor="middle" font-size="16" fill="#a00">$x_2$</text>
+              <ellipse cx="150" cy="60" rx="15" ry="38" class="ellipse3"/>
+              <text x="150" y="65" text-anchor="middle" font-size="16" fill="#a00">$x_3$</text>
+              <ellipse cx="30" cy="125" rx="15" ry="38" class="ellipse4"/>
+              <text x="30" y="130" text-anchor="middle" font-size="16" fill="#a00">$x_4$</text>
+            </svg>
             </div>
             <p>A well-known example of a UPB is the "Tiles" basis, which consists of 5 vectors in a 9-dimensional space:</p>
             <ul>
                 <li>$|x_1\rangle = \frac{1}{\sqrt{2}}|0\rangle \otimes (|0\rangle - |1\rangle)$</li>
-                <li>$|x_2\rangle = \frac{1}{\sqrt{2}}|1\rangle \otimes (|1\rangle - |2\rangle)$</li>
-                <li>$|x_3\rangle = \frac{1}{\sqrt{2}}|2\rangle \otimes (|2\rangle - |0\rangle)$</li>
-                <li>$|x_4\rangle = \frac{1}{\sqrt{2}}(|0\rangle - |1\rangle) \otimes |2\rangle$</li>
+                <li>$|x_2\rangle = \frac{1}{\sqrt{2}}|2\rangle \otimes (|1\rangle - |2\rangle)$</li>
+                <li>$|x_3\rangle = \frac{1}{\sqrt{2}}(|0\rangle - |1\rangle) \otimes |2\rangle$</li>
+                <li>$|x_4\rangle = \frac{1}{\sqrt{2}}(|1\rangle - |2\rangle) \otimes |0\rangle$</li>
                 <li>$|x_5\rangle = \frac{1}{\sqrt{3}}(|0\rangle+|1\rangle+|2\rangle) \otimes (|0\rangle+|1\rangle+|2\rangle)$</li>
             </ul>
             <p>One can verify that these 5 vectors are orthonormal. The crucial part is to show they are unextendible. Suppose there exists a product vector $|\psi\rangle = |a\rangle \otimes |b\rangle$ such that $\langle x_i | \psi \rangle = 0$ for all $i=1, \dots, 5$. This leads to a set of linear equations on the components of $|a\rangle$ and $|b\rangle$ that has no non-trivial solution, proving unextendibility. The corresponding state $\rho = \frac{1}{4}(\text{Id}_9 - \sum_{i=1}^5|x_i\rangle\langle x_i|)$ is therefore a PPT-entangled state.</p>
