--- a/assets/html/tensor-norms-quantum-entanglement-2.html
+++ b/assets/html/tensor-norms-quantum-entanglement-2.html
@@ -457,7 +457,7 @@
             $$
             \langle x_1 | \psi \rangle = \langle 0 | a \rangle \cdot (\langle 0 | b \rangle - \langle 1 | b \rangle) = 0
             $$
-            and similarly for the other $|x_i\rangle$. Each equation gives implies orthogonality condition for |a\rangle or |b\rangle<br>
+            and similarly for the other $|x_i\rangle$. Each equation implies an orthogonality condition for $|a\rangle$ or $|b\rangle$<br>
             There are 5 equations. Hence by pigeonhole principle, this forces $|a\rangle$ or $|b\rangle$ to be orthogonal to at least 3 independent vectors in $\mathbb{C}^3$, which is only possible if $|a\rangle = 0$ or $|b\rangle = 0$. <br>
             Thus, there is no nonzero product vector orthogonal to all $|x_i\rangle$. <br>
             Therefore, the set is unextendible.
